--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="left__container-content">
           <div class="left__container-title">
             <div class="profile-picture">
-              <img class="profile-img" src="/img/profile.jpg" />
+              <img class="profile-img" src="img/profile.jpg" />
             </div>
             <div class="profile-name">
               <div class="profile-name_name">
@@ -28,29 +28,167 @@
               </div>
             </div>
           </div>
+          <!-- PERSONAL -->
+          <div class="left__container-block">
+            <div class="left__container-block_software">
+              <span class="software">Unity</span>
+              <span class="software">Blender</span>
+              <span class="software">Figma</span>
+            </div>
+            <div class="left__container-block_langs">
+              <span class="lang csharp">C#</span>
+              <span class="lang dotc">C</span>
+              <span class="lang py">Python</span>
+              <span class="lang js">JavaScript</span>
+              <span class="lang ts">TypeScript</span>
+              <span class="lang react">React</span>
+              <span class="lang next">Next</span>
+            </div>
+          </div>
+          <!-- EXPERIENCE -->
           <div class="left__container-separation">
-            <h3 class="separator-text">Experience</h3>
+            <h3 class="separator-text">Work Experience</h3>
           </div>
           <div class="left__container-block">
             <div class="block-title">
-              <h3 class="block-text">Designer, Framer</h3>
-              <span class="block-date">2017 - Present</span>
+              <h3 class="block-text">Xerox analyst and technician</h3>
+              <span class="block-date">2023 - Present</span>
             </div>
             <div class="block-description">
               <p class="left__container-text">
-                From which we spring invent the universe corpus callosum the
-                only home we've ever known decipherment dispassionate
-                extraterrestrial observer. Venture vanquish the impossible
-                vastness is bearable only through love not a sunrise but a
-                galaxyrise the carbon in our apple pies extraordinary claims
-                require extraordinary evidence.
+                Currently working for XEKmate as an analyst/technician. My job
+                is to analyze the workplace of a client and make sure it has
+                enough room and resources to install a MFP Xerox device, after
+                the analysis, the printer is installed in the client's office.
+                The other side of the job involves technical support (helpdesk)
+                through Anydesk and/or TeamViewer.
               </p>
             </div>
             <div class="block-link">
-              <a class="left__container-link" href="#">
-                <p class="left__container-text">
-                  View work <span class="left__container-arrow">→</span>
+              <a
+                class="left__container-link"
+                target="_blank"
+                href="https://www.xekmate.pt/"
+              >
+                <p class="left__container-text_link">View work</p>
+                <span class="left__container-text_link_span"> →</span>
+              </a>
+            </div>
+          </div>
+
+          <div class="left__container-block">
+            <div class="block-title">
+              <h3 class="block-text">Computer technician</h3>
+              <span class="block-date">2022 - 2023</span>
+            </div>
+            <div class="block-description">
+              <p class="left__container-text">
+                I used to work for PCQUATRO, the job involved building PCs for
+                individuals and enterprises, along with repairing similar
+                systems (PCs, laptops, AIOs). I also worked with networking
+                architectures, passing and creating ethernet cables for clients.
+                This job also gave me experience with helpdesk, tech support and
+                selling products to clients within the physical shop.
+              </p>
+            </div>
+            <div class="block-link">
+              <a
+                class="left__container-link"
+                target="_blank"
+                href="https://pcquatro.pt/"
+              >
+                <p class="left__container-text_link">View work</p>
+                <span class="left__container-text_link_span"> →</span>
+              </a>
+            </div>
+          </div>
+          <hr />
+          <!-- EDUCATION -->
+          <div class="left__container-separation">
+            <h3 class="separator-text">Education</h3>
+          </div>
+          <div class="left__container-block">
+            <div class="block-title">
+              <h3 class="block-text">University of Algarve, UALG</h3>
+              <span class="block-date">2020 - 2022</span>
+            </div>
+            <div class="block-description">
+              <p class="left__container-text">
+                I had 2 years of education in UALG learning Computing Systems
+                and Technologies, finished the university with a Certificate of
+                Professional Qualification Level 4, within the studies I learnt
+                C, C#, Python and Web Development (JavaScript).
+              </p>
+            </div>
+            <div class="block-link">
+              <a
+                class="left__container-link"
+                target="_blank"
+                href="https://www.ualg.pt/"
+              >
+                <p class="left__container-text_link">View work</p>
+                <span class="left__container-text_link_span"> →</span>
+              </a>
+            </div>
+          </div>
+          <hr />
+          <!-- LINKS -->
+          <div class="left__container-separation">
+            <h3 class="separator-text">Portfolio</h3>
+          </div>
+          <div class="left__container-block">
+            <div class="block-link">
+              <a
+                target="_blank"
+                class="left__container-link"
+                href="https://diogoagostinho.github.io/design-matters-lookalike/"
+              >
+                <p class="left__container-text_link">Game Library</p>
+                <span class="left__container-text_link_span"> →</span>
+              </a>
+            </div>
+            <div class="block-link">
+              <a
+                target="_blank"
+                class="left__container-link"
+                href="https://agstnh-crypto.netlify.app/"
+              >
+                <p class="left__container-text_link">
+                  NFT Platform Splash Page
                 </p>
+                <span class="left__container-text_link_span"> →</span>
+              </a>
+            </div>
+            <div class="block-link">
+              <a
+                target="_blank"
+                class="left__container-link"
+                href="https://agostinho-gpt3.netlify.app/"
+              >
+                <p class="left__container-text_link">
+                  OpenAI GPT-3 Splash Page
+                </p>
+                <span class="left__container-text_link_span"> →</span>
+              </a>
+            </div>
+            <div class="block-link">
+              <a
+                target="_blank"
+                class="left__container-link"
+                href="https://agostinho-cocktails.netlify.app/"
+              >
+                <p class="left__container-text_link">The Cocktail Database</p>
+                <span class="left__container-text_link_span"> →</span>
+              </a>
+            </div>
+            <div class="block-link">
+              <a
+                target="_blank"
+                class="left__container-link"
+                href="https://github.com/diogoagostinho/ultra-rhythm-heat"
+              >
+                <p class="left__container-text_link">Ultra Rhythm Heat</p>
+                <span class="left__container-text_link_span"> →</span>
               </a>
             </div>
           </div>
@@ -59,38 +197,92 @@
       <div class="right__container">
         <div class="right__container-content">
           <div class="right__container-about">
-            <h2 class="job">About</h2>
+            <h2 class="right__container-title">About</h2>
             <p class="right__container-text">
-              Web fanatic. Pop culture aficionado. Unapologetic introvert.
-              Analyst. Incurable coffee fan. General beer enthusiast.
+              Currently learning both web development (front-end) and game
+              development (unity). Trying to learn ReactJS at the time, along
+              with C# for software, had past experience with Blender.
+              <br /><br />
+              ☕ Coffee enjoyer.
             </p>
           </div>
           <div class="right__container-skills">
-            <h2 class="job">Skills</h2>
+            <h2 class="right__container-title">Skills</h2>
             <ul class="list">
-              <li class="list-text">UI Design</li>
-              <li class="list-text">Web Design</li>
-              <li class="list-text">3D Modeling</li>
-              <li class="list-text">Game Design</li>
+              <li class="list-text">• UI Design</li>
+              <li class="list-text">• Web Development</li>
+              <li class="list-text">• 3D Modeling</li>
+              <li class="list-text">• Game Development</li>
+              <li class="list-text">• Software Development</li>
             </ul>
           </div>
           <div class="right__container-contact">
-            <h2 class="job">Contact</h2>
-            <a class="right__container-link" href="#">
-              <p class="right__container-text">
-                LinkedIn <span class="right__container-arrow">→</span>
+            <h2 class="right__container-title">Contact</h2>
+            <div class="right__container-link_block">
+              <a
+                class="right__container-link"
+                target="_blank"
+                href="https://www.linkedin.com/in/diogo-agostinho-b99a33224/"
+              >
+                <p class="right__container-text_link">LinkedIn</p>
+                <span class="right__container-text_link_span"> →</span>
+              </a>
+            </div>
+            <div class="right__container-link_block">
+              <a
+                class="right__container-link"
+                target="_blank"
+                href="https://twitter.com/agostinho_dev"
+              >
+                <p class="right__container-text_link">Twitter</p>
+                <span class="right__container-text_link_span"> →</span>
+              </a>
+            </div>
+            <div class="right__container-link_block">
+              <a
+                class="right__container-link"
+                target="_blank"
+                href="https://github.com/diogoagostinho"
+              >
+                <p class="right__container-text_link">Github</p>
+                <span class="right__container-text_link_span"> →</span>
+              </a>
+            </div>
+            <div class="right__container-link_block">
+              <a
+                class="right__container-link"
+                target="_blank"
+                href="https://dev.to/diogoagostinho"
+              >
+                <p class="right__container-text_link">DEV.to</p>
+                <span class="right__container-text_link_span"> →</span>
+              </a>
+            </div>
+            <div class="right__container-link_block">
+              <a
+                class="right__container-link"
+                target="_blank"
+                href="https://hashnode.com/@diogoagostinho"
+              >
+                <p class="right__container-text_link">Hashnode</p>
+                <span class="right__container-text_link_span"> →</span>
+              </a>
+            </div>
+            <div class="right__container-link_block">
+              <a
+                class="right__container-link"
+                target="_blank"
+                href="https://app.daily.dev/diogoagostinho"
+              >
+                <p class="right__container-text_link">daily.dev</p>
+                <span class="right__container-text_link_span"> →</span>
+              </a>
+            </div>
+            <div class="right__container-email">
+              <p class="right__container-text_link">
+                contacto@diogoagostinho.pt
               </p>
-            </a>
-            <a class="right__container-link" href="#">
-              <p class="right__container-text">
-                X (Twitter) <span class="right__container-arrow">→</span>
-              </p>
-            </a>
-            <a class="right__container-link" href="#">
-              <p class="right__container-text">
-                Github <span class="right__container-arrow">→</span>
-              </p>
-            </a>
+            </div>
           </div>
         </div>
       </div>
