--- a/index.html
+++ b/index.html
@@ -10,24 +10,32 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900;9..40,1000&display=swap"
       rel="stylesheet"
     />
+    <title>Diogo Agostinho</title>
+    <link rel="icon" type="image/x-icon" href="img/icon.ico" />
   </head>
   <body>
     <div class="root">
       <div class="left__container">
         <div class="left__container-content">
-          <div class="left__container-title">
-            <div class="profile-picture">
-              <img class="profile-img" src="img/profile.jpg" />
+          <div class="left__container-content_navbar">
+            <div class="left__container-title">
+              <div class="profile-picture">
+                <img class="profile-img" src="img/profile.jpg" />
+              </div>
+              <div class="profile-name">
+                <div class="profile-name_name">
+                  <h1 class="title">Diogo Agostinho</h1>
+                </div>
+                <div class="profile-name_job">
+                  <h2 class="job">Web and Game Developer</h2>
+                </div>
+              </div>
             </div>
-            <div class="profile-name">
-              <div class="profile-name_name">
-                <h1 class="title">Diogo Agostinho</h1>
-              </div>
-              <div class="profile-name_job">
-                <h2 class="job">Web and Game Developer</h2>
-              </div>
+            <div class="left__container-switch">
+              <img class="holo__switch_img" src="img/holo_button.jpg" />
             </div>
           </div>
+
           <!-- PERSONAL -->
           <div class="left__container-block">
             <div class="left__container-block_software">
