Updated links and made website responsive

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           </div>
 
           <div class="left__container-block">
-            <p class="link_separator">JavaScript</p>
+            <p class="link_separator">JavaScript & jQuery</p>
             <div class="block-link">
               <a
                 target="_blank"
@@ -161,6 +161,16 @@
                 href="https://diogoagostinho.github.io/design-matters-lookalike/"
               >
                 <p class="left__container-text_link">Game Library</p>
+                <span class="left__container-text_link_span"> →</span>
+              </a>
+            </div>
+            <div class="block-link">
+              <a
+                target="_blank"
+                class="left__container-link"
+                href="https://diogoagostinho.github.io/github-universe-23/"
+              >
+                <p class="left__container-text_link">GitHub Universe 2023</p>
                 <span class="left__container-text_link_span"> →</span>
               </a>
             </div>
