--- a/index.html
+++ b/index.html
@@ -189,6 +189,18 @@
               <a
                 target="_blank"
                 class="left__container-link"
+                href="https://agstnh-nanocard.netlify.app/"
+              >
+                <p class="left__container-text_link">
+                  NanoCard
+                </p>
+                <span class="left__container-text_link_span"> →</span>
+              </a>
+            </div>
+            <div class="block-link">
+              <a
+                target="_blank"
+                class="left__container-link"
                 href="https://agstnh-crypto.netlify.app/"
               >
                 <p class="left__container-text_link">
