--- a/index.html
+++ b/index.html
@@ -153,6 +153,47 @@
           </div>
 
           <div class="left__container-block">
+            <p class="link_separator">React</p>
+            <div class="block-link">
+              <a
+                target="_blank"
+                class="left__container-link"
+                href="https://agstnh-nanocard.netlify.app/"
+              >
+                <p class="left__container-text_link">NanoCard</p>
+                <span class="left__container-text_link_span"> →</span>
+              </a>
+            </div>
+            <div class="block-link">
+              <a
+                target="_blank"
+                class="left__container-link"
+                href="https://wallabank.vercel.app/"
+              >
+                <p class="left__container-text_link">wallabank</p>
+                <span class="left__container-text_link_span"> →</span>
+              </a>
+            </div>
+            <div class="block-link">
+              <a
+                target="_blank"
+                class="left__container-link"
+                href="https://agostinho-gpt3.netlify.app/"
+              >
+                <p class="left__container-text_link">OpenAI GPT-3</p>
+                <span class="left__container-text_link_span"> →</span>
+              </a>
+            </div>
+            <div class="block-link">
+              <a
+                target="_blank"
+                class="left__container-link"
+                href="https://agostinho-cocktails.netlify.app/"
+              >
+                <p class="left__container-text_link">The Cocktail Database</p>
+                <span class="left__container-text_link_span"> →</span>
+              </a>
+            </div>
             <p class="link_separator">JavaScript</p>
             <div class="block-link">
               <a
@@ -181,64 +222,6 @@
                 href="https://diogoagostinho.github.io/firebase-blog/"
               >
                 <p class="left__container-text_link">Firebase Blog</p>
-                <span class="left__container-text_link_span"> →</span>
-              </a>
-            </div>
-            <p class="link_separator">React</p>
-            <div class="block-link">
-              <a
-                target="_blank"
-                class="left__container-link"
-                href="https://agstnh-nanocard.netlify.app/"
-              >
-                <p class="left__container-text_link">
-                  NanoCard
-                </p>
-                <span class="left__container-text_link_span"> →</span>
-              </a>
-            </div>
-            <div class="block-link">
-              <a
-                target="_blank"
-                class="left__container-link"
-                href="https://agstnh-crypto.netlify.app/"
-              >
-                <p class="left__container-text_link">
-                  NFT Platform Splash Page
-                </p>
-                <span class="left__container-text_link_span"> →</span>
-              </a>
-            </div>
-            <div class="block-link">
-              <a
-                target="_blank"
-                class="left__container-link"
-                href="https://agostinho-gpt3.netlify.app/"
-              >
-                <p class="left__container-text_link">
-                  OpenAI GPT-3 Splash Page
-                </p>
-                <span class="left__container-text_link_span"> →</span>
-              </a>
-            </div>
-            <div class="block-link">
-              <a
-                target="_blank"
-                class="left__container-link"
-                href="https://agostinho-cocktails.netlify.app/"
-              >
-                <p class="left__container-text_link">The Cocktail Database</p>
-                <span class="left__container-text_link_span"> →</span>
-              </a>
-            </div>
-            <p class="link_separator">Unity</p>
-            <div class="block-link">
-              <a
-                target="_blank"
-                class="left__container-link"
-                href="https://github.com/diogoagostinho/ultra-rhythm-heat"
-              >
-                <p class="left__container-text_link">Ultra Rhythm Heat</p>
                 <span class="left__container-text_link_span"> →</span>
               </a>
             </div>
